--- a/assets/pug/pages/template/input-textarea.pug
+++ b/assets/pug/pages/template/input-textarea.pug
@@ -289,11 +289,11 @@ html(lang='en')
                           |           &lt;/div&gt; 
                           |       &lt;/div&gt;  
                           |    &lt;/div&gt; 
-                          |&lt;/form&gt; 
+                          |&lt;/form&gt;  
 
             div.col-span-4(class="lg:col-span-6 2md:col-span-12")
-              div.card.tabs
-                div.card-header.pb-2.header-bottom-border
+              div.card.tabs 
+                div.card-header.pb-2.header-bottom-border  
                   div.flex.flex-col
                     h3.text-lg.font-bold Disable Input 
                     p Add disable input using 
@@ -303,13 +303,13 @@ html(lang='en')
                       button.p-0.tab.tab-lifted.tab-active(data-tabFilter="1" class="tab-link") Preview  
                       button.p-0.tab.tab-lifted(data-tabFilter="2" class="tab-link tab-2") Html
                 div.card-body                                   
-                  div.tabs-content
+                  div.tabs-content 
                     div(data-tabContent="1" class="tab-pan active show first:rounded-tl-none rounded-5")
                       form
-                        div.flex.flex-col.gap-3.form-group
-                          div.flex.flex-col.gap-1
-                            div.flex.items-center.justify-center
-                              input(type="text" placeholder="Leave a message" class="p-[11px] dark:bg-sidebar-dark2 dark:border-border-dark").w-full.rounded-5.border.border-border-light.text-xs.text-content(disabled="disabled")
+                        div.flex.flex-col.gap-3.form-group 
+                          div.flex.flex-col.gap-1  
+                            div.flex.items-center.justify-center 
+                              input(type="text" placeholder="Leave a message" class="p-[11px] dark:bg-sidebar-dark2 dark:border-border-dark rounded-br-none rounded-tr-none").w-full.rounded-5.border.border-border-light.text-xs.text-content(disabled="disabled") 
                               span.flex.items-center.justify-center.bg-primary.text-white.rounded-5.border-none.rounded-bl-none.rounded-tl-none.font-medium.text-xs(class="py-[13px] px-[11px] rtl:rounded-bl-5 rtl:rounded-br-none rtl:rounded-tr-none rtl:rounded-tl-5") Send
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
                       button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white")
@@ -326,7 +326,6 @@ html(lang='en')
                           |       &lt;/div&gt;  
                           |    &lt;/div&gt; 
                           |&lt;/form&gt; 
-
             div.col-span-6(class="2md:col-span-12")
               div.card.tabs
                 div.card-header.pb-2.header-bottom-border
