--- a/assets/pug/pages/template/product.pug
+++ b/assets/pug/pages/template/product.pug
@@ -96,16 +96,16 @@ html(lang='en')
                   label(for="4above").text-content3.text-xs.font-semibold 1059 ratings
                 h4(class="my-2 font-semibold text-title lg:text-lg") $500 
                   del(class="text-danger") $350 
-                div.divider.w-full.my-4(class="before:!bg-border-light after:!bg-border-light 2lg:my-3")
-                div.grid.grid-cols-12.gap-card-gap.items-center 
+                div(class="divider my-4 w-full bg-gray-light dark:bg-sidebar-dark 2lg:my-3")
+                div.grid.grid-cols-12.gap-card-gap.items-center
                   div.col-span-6(class="lg:col-span-12 md:col-span-6 sm:col-span-12")
                     div.flex.items-center.gap-3
                       label.text-title.text-sm.font-medium(for="size") Sizes   
-                      ul.flex.items-center.gap-2
-                        li.border.border-border-light.rounded-full.text-title.leading-none.w-8.h-8.flex.items-center.justify-center(class="hover:bg-gray-extralight") S 
-                        li.btn-active.text-title.leading-none.w-8.h-8.flex.items-center.justify-center.border.border-border-light.bg-gray-extralight.rounded-full(class="hover:bg-gray-extralight") M
-                        li.border.border-border-light.rounded-full.text-title.leading-none.w-8.h-8.flex.items-center.justify-center(class="hover:bg-gray-extralight") L
-                        li.border.border-border-light.rounded-full.text-title.leading-none.w-8.h-8.flex.items-center.justify-center(class="hover:bg-gray-extralight") XL
+                      ul.flex.items-center.gap-2 
+                        li.border.border-border-light.rounded-full.text-title.leading-none.w-8.h-8.flex.items-center.justify-center(class="hover:bg-gray-extralight dark:border-border-dark dark:hover:bg-sidebar-dark2") S 
+                        li.btn-active.text-title.leading-none.w-8.h-8.flex.items-center.justify-center.border.border-border-light.bg-gray-extralight.rounded-full(class="hover:bg-gray-extralight dark:border-border-dark dark:hover:bg-sidebar-dark2 dark:bg-sidebar-dark2") M
+                        li.border.border-border-light.rounded-full.text-title.leading-none.w-8.h-8.flex.items-center.justify-center(class="hover:bg-gray-extralight dark:border-border-dark dark:hover:bg-sidebar-dark2") L
+                        li.border.border-border-light.rounded-full.text-title.leading-none.w-8.h-8.flex.items-center.justify-center(class="hover:bg-gray-extralight dark:border-border-dark dark:hover:bg-sidebar-dark2") XL
                   div.col-span-6(class="lg:col-span-12 md:col-span-6 sm:col-span-12")
                     div.flex.items-center.gap-3 
                       label.text-title.text-sm.font-medium(for="color") Color
@@ -115,12 +115,12 @@ html(lang='en')
                         li(class="w-6 h-6 rounded-full cursor-pointer bg-warning")
                         li(class="w-6 h-6 rounded-full cursor-pointer bg-danger")
                         li(class="w-6 h-6 rounded-full cursor-pointer bg-info") 
-                div.divider.w-full.my-4(class="before:!bg-border-light after:!bg-border-light 2lg:my-3")      
+                div(class="divider my-4 w-full bg-gray-light dark:bg-sidebar-dark 2lg:my-3")      
                 div
                   h6.text-title.font-medium Description: 
                   p.text-content3.text-sm.mt-2.line-clamp-2 A bag that holds your entire universe! A tote bag is a shoulder bag with parallel handles that might have side panels or not. The exterior is beige and has one main compartment, three total pockets, and a zippered clasp. I use excellent, cruelty-free materials.
-                div.divider.w-full.my-4(class="before:!bg-border-light after:!bg-border-light 2lg:my-3")
-                div 
+                div(class="divider my-4 w-full bg-gray-light dark:bg-sidebar-dark 2lg:my-3")
+                div  
                   h6.text-title.font-medium Product Description:
                   div.w-full.tabs.flex-col.mt-2
                     div.tab-links.flex.items-center(class="mb-[1px]")
