--- a/html/template/invoice-preview.html
+++ b/html/template/invoice-preview.html
@@ -1000,12 +1000,12 @@
         </div>
         <!-- Sidebar End -->
         <!-- Page Body Start-->
-        <div class="page-body">
+        <div class="page-body"> 
           <div class="grid grid-cols-12 gap-card-gap">
             <div class="col-span-12">
               <div class="card max-w-5xl m-auto overflow-auto invoice-preview custom-scroll"> 
                 <table class="table equal-space">
-                  <tbody>  
+                  <tbody>
                     <tr>
                       <td class="min-w-[220px]"><img class="w-20" src="../../assets/images/logo/logo-dark.png" alt="logo">
                         <div class="mt-4">
@@ -1023,8 +1023,8 @@
                     <tr>
                       <td colspan="2">
                         <table class="table equal-space">
-                          <tbody>  
-                            <tr> 
+                          <tbody>   
+                            <tr>
                               <td class="min-w-[120px]">
                                 <p class="text-title text-xs font-bold uppercase">Invoice No</p><span class="font-medium text-content3">go157864</span>
                               </td>
@@ -1033,9 +1033,9 @@
                               </td>
                               <td class="min-w-[150px]">
                                 <p class="text-title text-xs font-bold uppercase">payment Status</p>
-                                <div class="badge bg-success-light text-success rounded inline-block">Paid</div>
+                                <div class="dark:bg-sidebar-dark2 badge bg-success-light text-success rounded inline-block">Paid</div>
                               </td>
-                              <td class="min-w-[130px]">
+                              <td class="min-w-[130px]"> 
                                 <p class="text-title text-xs font-bold uppercase">Total Amount</p><span class="font-medium text-content3">$787.6</span>
                               </td>
                             </tr>
@@ -1044,14 +1044,14 @@
                       </td>
                     </tr>
                     <tr>
-                      <td class="min-w-[220px]"> 
+                      <td class="min-w-[220px]">
                         <p class="text-title text-xs font-bold uppercase !mb-0">Shipping Address </p>
                         <p class="text-title text-xs font-bold last:!mb-0">	Vilma Gerhold</p>
                         <p class="font-medium text-content3 last:!mb-0">14300 Gallant Fox Ln, Bowie</p>
                         <p class="font-medium text-content3 last:!mb-0">Maryland, 20715, US</p>
                         <p class="font-medium text-content3 last:!mb-0">(301) 464-0110</p>
                       </td>
-                      <td class="min-w-[220px]"> 
+                      <td class="min-w-[220px]">
                         <p class="text-title text-xs font-bold uppercase !mb-0">Billing Address </p>
                         <p class="text-title text-xs font-bold last:!mb-0">	Vilma Gerhold</p>
                         <p class="font-medium text-content3 last:!mb-0">14300 Gallant Fox Ln, Bowie</p>
@@ -1063,7 +1063,7 @@
                       <td class="invoice-table" colspan="2">
                         <div class="overflow-auto custom-scroll"> 
                           <table class="table equal-space">
-                            <thead> 
+                            <thead>
                               <tr> 
                                 <th>Product</th>
                                 <th>Product Detail</th>
@@ -1071,61 +1071,61 @@
                               </tr>
                             </thead>
                             <tbody>
-                              <tr>
-                                <td><img class="min-w-[4rem] w-16 h-14 rounded-5" src="../../assets/images/ecommerce/11.jpg" alt="11.jpg"></td>
+                              <tr> 
+                                <td> <img class="min-w-[4rem] w-16 h-14 rounded-5" src="../../assets/images/ecommerce/11.jpg" alt="11.jpg"></td>
                                 <td class="min-w-[560px] 2lg:min-w-[450px]">
-                                  <div>
-                                    <h4 class="text-xs font-semibold text-title">Coffee Cup</h4><span class="block mt-1 font-semibold text-2xs text-content">$98 * 2</span>
+                                  <div> 
+                                    <h4 class="text-xs font-semibold text-title dark:text-white">Coffee Cup</h4><span class="block mt-1 font-semibold text-2xs text-content dark:text-white">$98 * 2</span>
                                   </div>
                                 </td>
-                                <td class="min-w-[.625rem]">$190</td>
-                              </tr>
-                              <tr>
-                                <td><img class="min-w-[4rem] w-16 h-14 rounded-5" src="../../assets/images/ecommerce/13.jpg" alt="13.jpg"></td>
-                                <td class="min-w-[560px] 2lg:min-w-[450px]">
-                                  <div>
-                                    <h4 class="text-xs font-semibold text-title">Facewash - For Good skincare</h4><span class="block mt-1 font-semibold text-2xs text-content">$75 * 2</span>
-                                  </div>
-                                </td>
-                                <td class="min-w-[.625rem]">$150</td>
-                              </tr>
-                              <tr>
-                                <td><img class="min-w-[4rem] w-16 h-14 rounded-5" src="../../assets/images/ecommerce/14.jpg" alt="14.jpg"></td>
-                                <td class="min-w-[560px] 2lg:min-w-[450px]">
-                                  <div>
-                                    <h4 class="text-xs font-semibold text-title">Perfume - Great fragrance</h4><span class="block mt-1 font-semibold text-2xs text-content">$299</span>
-                                  </div>
-                                </td>
-                                <td class="min-w-[.625rem]">$299</td>
-                              </tr>
-                              <tr>
-                                <td><img class="min-w-[4rem] w-16 h-14 rounded-5" src="../../assets/images/ecommerce/16.jpg" alt="16.jpg"></td>
-                                <td class="min-w-[560px] 2lg:min-w-[450px]">
-                                  <div>
-                                    <h4 class="text-xs font-semibold text-title">Women's Leather Bags</h4><span class="block mt-1 font-semibold text-2xs text-content">$212</span>
-                                  </div>
-                                </td>
-                                <td class="min-w-[.625rem]">$212</td>
+                                <td class="min-w-[.625rem] dark:text-white">$190</td>
                               </tr>
                               <tr> 
-                                <td class="text-xs font-bold" colspan="2">Sub Total :</td>
-                                <td class="text-xs font-bold text-end">$851.00 </td>
+                                <td> <img class="min-w-[4rem] w-16 h-14 rounded-5" src="../../assets/images/ecommerce/13.jpg" alt="13.jpg"></td>
+                                <td class="min-w-[560px] 2lg:min-w-[450px]">
+                                  <div> 
+                                    <h4 class="text-xs font-semibold text-title dark:text-white">Facewash - For Good skincare</h4><span class="block mt-1 font-semibold text-2xs text-content dark:text-white">$75 * 2</span>
+                                  </div>
+                                </td>
+                                <td class="min-w-[.625rem] dark:text-white">$150</td>
                               </tr>
                               <tr> 
-                                <td class="text-xs" colspan="2">Discount :</td>
+                                <td> <img class="min-w-[4rem] w-16 h-14 rounded-5" src="../../assets/images/ecommerce/14.jpg" alt="14.jpg"></td>
+                                <td class="min-w-[560px] 2lg:min-w-[450px]">
+                                  <div> 
+                                    <h4 class="text-xs font-semibold text-title dark:text-white">Perfume - Great fragrance</h4><span class="block mt-1 font-semibold text-2xs text-content dark:text-white">$299</span>
+                                  </div>
+                                </td>
+                                <td class="min-w-[.625rem] dark:text-white">$299</td>
+                              </tr>
+                              <tr> 
+                                <td> <img class="min-w-[4rem] w-16 h-14 rounded-5" src="../../assets/images/ecommerce/16.jpg" alt="16.jpg"></td>
+                                <td class="min-w-[560px] 2lg:min-w-[450px]">
+                                  <div> 
+                                    <h4 class="text-xs font-semibold text-title dark:text-white">Women's Leather Bags</h4><span class="block mt-1 font-semibold text-2xs text-content dark:text-white">$212</span>
+                                  </div>
+                                </td>
+                                <td class="min-w-[.625rem] dark:text-white">$212</td>
+                              </tr>
+                              <tr> 
+                                <td class="text-xs dark:text-white font-bold" colspan="2">Sub Total :</td>
+                                <td class="text-xs dark:text-white font-bold text-end">$851.00 </td>
+                              </tr>
+                              <tr> 
+                                <td class="text-xs dark:text-white" colspan="2">Discount : </td>
                                 <td class="text-xs text-content3 text-end">-$50.00</td>
                               </tr>
                               <tr> 
-                                <td class="text-xs" colspan="2">Shipping Charge :</td>
+                                <td class="text-xs dark:text-white" colspan="2">Shipping Charge :</td>
                                 <td class="text-xs text-content3 text-end">-$25.99  </td>
                               </tr>
                               <tr> 
-                                <td class="text-xs" colspan="2">Tax :</td>
+                                <td class="text-xs dark:text-white" colspan="2">Tax :</td>
                                 <td class="text-xs text-content3 text-end">-$12.59  </td>
                               </tr>
                               <tr> 
-                                <td class="text-xs font-bold" colspan="2">Total (USD) :</td>
-                                <td class="text-xs font-bold text-end">$787.6 </td>
+                                <td class="text-xs dark:text-white font-bold" colspan="2">Total (USD) :</td>
+                                <td class="text-xs dark:text-white font-bold text-end">$787.6 </td>
                               </tr>
                             </tbody>
                           </table>
@@ -1167,7 +1167,7 @@
         </div>
       </div>
       <!-- Customizer-->
-      <div class="bg-white customizer-sidebar dark:bg-sidebar-dark2">
+      <div class="bg-white customizer-sidebar dark:bg-sidebar-dark2 dark:border-border-dark">
         <div class="flex rtl:flex items-center text-title bg-primary justify-between  p-[15px] shadow-md"> <span class="text-base font-semibold text-white">Customizer</span>
           <button class="customizer-close"> <i class="w-4 h-4 stroke-white" data-feather="x"></i></button>
         </div>
@@ -1180,7 +1180,7 @@
                 </div>
                 <div class="mt-2">
                   <ul class="flex items-center gap-3 flex-wrap"> 
-                    <li class="relative">
+                    <li class="relative"> 
                       <input class="absolute invisible opacity-0 peer" checked id="light-checked" type="radio" name="mode"><i class="stroke-primary z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
                       <label class="block overflow-hidden border shadow-md mode-theme-light border-light rounded-5" for="light-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/light.png" alt="light"></label>
                     </li>
@@ -1226,7 +1226,7 @@
                 </div>
               </li>
               <li>
-                <div class="flex items-center justify-between"> <span class="text-sm font-semobold text-title">Monochrome Mode</span>
+                <div class="flex items-center justify-between"> <span class="text-sm font-semobold text-title">Monochrome Mode </span>
                   <label class="inline-flex relative items-center cursor-pointer">
                     <input class="sr-only peer monochrome toggle toggle-primary" name="monochrome" type="checkbox" id="monochrome"><span class="w-7 h-4 bg-content rounded-full peer peer-focus:outline-none peer-checked:after:translate-x-full peer-checked:after:content-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-light after:border after:rounded-full after:h-3 after:w-3 after:transition-all peer-checked:bg-primary"></span>
                   </label>
@@ -1235,8 +1235,8 @@
             </ul>
           </div>
         </div>
-        <div class="flex items-center gap-2 p-[15px] border-t border-light dark:bg-primaryLight"> 
-          <button class="btn btn-ghost flex-1 reset-customizer">Reset  </button>
+        <div class="flex items-center gap-2 p-[15px] border-t border-light dark:bg-primaryLight dark:border-t dark:border-border-dark"> 
+          <button class="btn btn-ghost flex-1 reset-customizer dark:bg-sidebar-dark">Reset  </button>
           <button class="btn btn-primary text-white flex-1">Buy Now</button>
         </div>
       </div>
