--- a/html/template/widgets.html
+++ b/html/template/widgets.html
@@ -1242,15 +1242,15 @@
                     </div>
                     <div class="card-body"> 
                       <ul> 
-                        <li class="py-[7px] px-[10px] bg-gray-light mt-[9px] first:mt-0 group"><a class="flex items-center justify-between" href="javascript:void(0)">
-                            <div class="flex items-center gap-2"><img class="w-10 h-10 scale-100 rounded-full group-hover:scale-105" src="../../assets/images/product/product-list/1.jpg" alt="Inventory Cost"/>
+                        <li class="py-[7px] px-[10px] bg-gray-light mt-[9px] first:mt-0 group dark:bg-sidebar-dark2"><a class="flex items-center justify-between" href="javascript:void(0)">
+                            <div class="flex items-center gap-2"> <img class="w-10 h-10 scale-100 rounded-full group-hover:scale-105" src="../../assets/images/product/product-list/1.jpg" alt="Inventory Cost"/>
                               <div>
                                 <h3 class="text-xs font-semibold text-title line-clamp-1">Inventory Cost</h3>
                                 <h4 class="font-semibold text-2xs text-content line-clamp-1">It explains the ins and outs.</h4>
                               </div>
                             </div><span class="text-sm font-bold text-title">$2,400</span></a></li>
-                        <li class="py-[7px] px-[10px] bg-gray-light mt-[9px] first:mt-0 group"><a class="flex items-center justify-between" href="javascript:void(0)">
-                            <div class="flex items-center gap-2"><img class="w-10 h-10 scale-100 rounded-full group-hover:scale-105" src="../../assets/images/product/product-list/2.jpg" alt="Eternal Cost"/>
+                        <li class="py-[7px] px-[10px] bg-gray-light mt-[9px] first:mt-0 group dark:bg-sidebar-dark2"><a class="flex items-center justify-between" href="javascript:void(0)">
+                            <div class="flex items-center gap-2"> <img class="w-10 h-10 scale-100 rounded-full group-hover:scale-105" src="../../assets/images/product/product-list/2.jpg" alt="Eternal Cost"/>
                               <div>
                                 <h3 class="text-xs font-semibold text-title line-clamp-1">Eternal Cost</h3>
                                 <h4 class="font-semibold text-2xs text-content line-clamp-1">It explains the ins and outs.</h4>
@@ -1297,15 +1297,15 @@
                     </div>
                     <div class="card-body"> 
                       <ul> 
-                        <li class="py-[7px] px-[10px] bg-gray-light mt-[9px] first:mt-0 group"><a class="flex items-center justify-between" href="javascript:void(0)">
-                            <div class="flex items-center gap-2"><img class="w-10 h-10 scale-100 rounded-full group-hover:scale-105" src="../../assets/images/product/product-list/3.jpg" alt="Linkedin"/>
+                        <li class="py-[7px] px-[10px] bg-gray-light mt-[9px] first:mt-0 group dark:bg-sidebar-dark2"><a class="flex items-center justify-between" href="javascript:void(0)">
+                            <div class="flex items-center gap-2"> <img class="w-10 h-10 scale-100 rounded-full group-hover:scale-105" src="../../assets/images/product/product-list/3.jpg" alt="Linkedin"/>
                               <div>
                                 <h3 class="text-xs font-semibold text-title line-clamp-1">Linkedin</h3>
                                 <h4 class="font-semibold text-2xs text-content line-clamp-1">It explains the ins and outs.</h4>
                               </div>
                             </div><span class="text-sm font-bold text-title">$3,460</span></a></li>
-                        <li class="py-[7px] px-[10px] bg-gray-light mt-[9px] first:mt-0 group"><a class="flex items-center justify-between" href="javascript:void(0)">
-                            <div class="flex items-center gap-2"><img class="w-10 h-10 scale-100 rounded-full group-hover:scale-105" src="../../assets/images/product/product-list/4.jpg" alt="Facebook"/>
+                        <li class="py-[7px] px-[10px] bg-gray-light mt-[9px] first:mt-0 group dark:bg-sidebar-dark2"><a class="flex items-center justify-between" href="javascript:void(0)">
+                            <div class="flex items-center gap-2"> <img class="w-10 h-10 scale-100 rounded-full group-hover:scale-105" src="../../assets/images/product/product-list/4.jpg" alt="Facebook"/>
                               <div>
                                 <h3 class="text-xs font-semibold text-title line-clamp-1">Facebook</h3>
                                 <h4 class="font-semibold text-2xs text-content line-clamp-1">It explains the ins and outs.</h4>
@@ -1426,7 +1426,7 @@
         </div>
       </div>
       <!-- Customizer-->
-      <div class="bg-white customizer-sidebar dark:bg-sidebar-dark2">
+      <div class="bg-white customizer-sidebar dark:bg-sidebar-dark2 dark:border-border-dark">
         <div class="flex rtl:flex items-center text-title bg-primary justify-between  p-[15px] shadow-md"> <span class="text-base font-semibold text-white">Customizer</span>
           <button class="customizer-close"> <i class="w-4 h-4 stroke-white" data-feather="x"></i></button>
         </div>
@@ -1439,7 +1439,7 @@
                 </div>
                 <div class="mt-2">
                   <ul class="flex items-center gap-3 flex-wrap"> 
-                    <li class="relative">
+                    <li class="relative"> 
                       <input class="absolute invisible opacity-0 peer" checked id="light-checked" type="radio" name="mode"><i class="stroke-primary z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
                       <label class="block overflow-hidden border shadow-md mode-theme-light border-light rounded-5" for="light-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/light.png" alt="light"></label>
                     </li>
@@ -1485,7 +1485,7 @@
                 </div>
               </li>
               <li>
-                <div class="flex items-center justify-between"> <span class="text-sm font-semobold text-title">Monochrome Mode</span>
+                <div class="flex items-center justify-between"> <span class="text-sm font-semobold text-title">Monochrome Mode </span>
                   <label class="inline-flex relative items-center cursor-pointer">
                     <input class="sr-only peer monochrome toggle toggle-primary" name="monochrome" type="checkbox" id="monochrome"><span class="w-7 h-4 bg-content rounded-full peer peer-focus:outline-none peer-checked:after:translate-x-full peer-checked:after:content-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-light after:border after:rounded-full after:h-3 after:w-3 after:transition-all peer-checked:bg-primary"></span>
                   </label>
@@ -1494,8 +1494,8 @@
             </ul>
           </div>
         </div>
-        <div class="flex items-center gap-2 p-[15px] border-t border-light dark:bg-primaryLight"> 
-          <button class="btn btn-ghost flex-1 reset-customizer">Reset  </button>
+        <div class="flex items-center gap-2 p-[15px] border-t border-light dark:bg-primaryLight dark:border-t dark:border-border-dark"> 
+          <button class="btn btn-ghost flex-1 reset-customizer dark:bg-sidebar-dark">Reset  </button>
           <button class="btn btn-primary text-white flex-1">Buy Now</button>
         </div>
       </div>
