--- a/html/template/add-product.html
+++ b/html/template/add-product.html
@@ -1007,7 +1007,7 @@
         <!-- Page Body Start-->
         <div class="page-body"> 
           <div class="grid grid-cols-12 gap-4 add-product card">
-            <div class="col-span-8 pr-4 border-r 2lg:col-span-12 2lg:border-b 2lg:pb-4 2lg:border-r-0 border-border-light rtl:border-l rtl:2lg:border-l-0 rtl:border-r-0 rtl:pl-4 rtl:pr-unset">
+            <div class="col-span-8 pr-4 border-r dark:border-r dark:border-border-dark  2lg:col-span-12 2lg:border-b 2lg:pb-4 2lg:border-r-0 border-border-light rtl:border-l rtl:2lg:border-l-0 rtl:border-r-0 rtl:pl-4 rtl:pr-unset">
               <div> 
                 <h5 class="text-title font-semibold mb-3">Create Product </h5>
                 <form class="flex flex-col gap-4 m-0 theme-form">
@@ -1017,7 +1017,7 @@
                   </div>
                   <div> 
                     <label for="description">Product Description </label>
-                    <textarea class="p-[11px] focus:!border-border-light w-full border border-border-light rounded-5 text-xs text-content" placeholder="A bag that holds your entire universe!"></textarea>
+                    <textarea class="p-[11px] dark:border-border-dark focus:!border-border-light w-full border border-border-light rounded-5 text-xs text-content" placeholder="A bag that holds your entire universe!"></textarea>
                   </div>
                   <div class="grid grid-cols-12 gap-5">
                     <div class="col-span-6 2md:col-span-6 sm:col-span-12">
@@ -1026,7 +1026,7 @@
                     </div>
                     <div class="col-span-6 2md:col-span-6 sm:col-span-12">
                       <label for="brand">Brand</label>
-                      <select class="form-select block w-full px-3 text-xs font-normal text-content3 bg-white bg-clip-padding bg-no-repeat border border-border-light rounded-5 transition ease-in-out m-0 min-w-[150px] py-[9px] dark:border-border-dark" id="brand" aria-label="Default select example">
+                      <select class="form-select block w-full px-3 text-xs font-normal text-content3 bg-white bg-clip-padding bg-no-repeat border border-border-light rounded-5 transition ease-in-out m-0 min-w-[150px] py-[9px] dark:border-border-dark dark:bg-sidebar-dark2" id="brand" aria-label="Default select example">
                         <option selected="">Dior</option>
                         <option value="1">Gucci</option>
                         <option value="2">louis vuitton</option>
@@ -1040,7 +1040,7 @@
                   <div class="grid grid-cols-12 gap-5">
                     <div class="col-span-4 2md:col-span-6 sm:col-span-12">
                       <label for="gender">Gender</label>
-                      <select class="form-select block w-full px-3 text-xs font-normal text-content3 bg-white bg-clip-padding bg-no-repeat border border-border-light rounded-5 transition ease-in-out m-0 min-w-[150px] py-[9px] dark:border-border-dark" id="gender" aria-label="Default select example">
+                      <select class="form-select block w-full px-3 text-xs font-normal text-content3 bg-white bg-clip-padding bg-no-repeat border border-border-light rounded-5 transition ease-in-out m-0 min-w-[150px] py-[9px] dark:border-border-dark dark:bg-sidebar-dark2 dark:border-border-dark" id="gender" aria-label="Default select example">
                         <option selected="">Female</option>
                         <option value="1">Male </option>
                         <option value="2">All</option>
@@ -1052,7 +1052,7 @@
                     </div>
                     <div class="col-span-4 2md:col-span-12">
                       <label for="price">Price </label>
-                      <div class="flex items-center"><span class="flex items-center justify-center bg-gray-light text-title border border-border-light rounded-5 rounded-br-none rounded-tr-none font-medium text-xs !leading-[18px] py-[12px] px-[11px] rtl:rounded-tr-5 rtl:rounded-br-5 rtl:rounded-tl-none rtl:rounded-bl-none">$</span>
+                      <div class="flex items-center"><span class="flex items-center justify-center bg-gray-light text-title border border-border-light rounded-5 rounded-br-none rounded-tr-none font-medium text-xs !leading-[18px] py-[12px] dark:bg-sidebar-dark2  dark:border-border-dark px-[11px] rtl:rounded-tr-5 rtl:rounded-br-5 rtl:rounded-tl-none rtl:rounded-bl-none">$</span>
                         <input class="p-[11px] w-full rounded-5 border border-border-light text-xs text-content !rounded-bl-none !rounded-tl-none rtl:!rounded-tr-none rtl:!rounded-br-none rtl:!rounded-tl-5 rtl:!rounded-bl-5" type="text" id="price" placeholder="300">
                       </div>
                     </div>
@@ -1060,7 +1060,7 @@
                   <div class="grid grid-cols-12 gap-5"> 
                     <div class="col-span-6 2md:col-span-6 sm:col-span-12">
                       <label for="tax">Tax</label>
-                      <select class="form-select block w-full px-3 text-xs font-normal text-content3 bg-white bg-clip-padding bg-no-repeat border border-border-light rounded-5 transition ease-in-out m-0 min-w-[150px] py-[9px] dark:border-border-dark" id="tax" aria-label="Default select example">
+                      <select class="form-select block w-full px-3 text-xs font-normal text-content3 bg-white bg-clip-padding bg-no-repeat border border-border-light rounded-5 transition ease-in-out m-0 min-w-[150px] py-[9px] dark:border-border-dark dark:bg-sidebar-dark2" id="tax" aria-label="Default select example">
                         <option selected="">Choose Tax</option>
                         <option value="1">2% </option>
                         <option value="2">3%</option>
@@ -1068,7 +1068,7 @@
                     </div>
                     <div class="col-span-6 2md:col-span-6 sm:col-span-12">
                       <label for="discount">Discount</label>
-                      <div class="flex items-center"><span class="flex items-center justify-center bg-gray-light text-title border border-border-light rounded-5 rounded-br-none rounded-tr-none font-medium text-xs !leading-[18px] py-[12px] px-[11px] rtl:rounded-tr-5 rtl:rounded-br-5 rtl:rounded-tl-none rtl:rounded-bl-none">%</span>
+                      <div class="flex items-center"><span class="flex items-center justify-center bg-gray-light text-title border border-border-light rounded-5 rounded-br-none rounded-tr-none font-medium text-xs !leading-[18px] py-[12px]  dark:border-border-dark dark:bg-sidebar-dark2 px-[11px] rtl:rounded-tr-5 rtl:rounded-br-5 rtl:rounded-tl-none rtl:rounded-bl-none">%</span>
                         <input class="p-[11px] w-full rounded-5 border border-border-light text-xs text-content !rounded-bl-none !rounded-tl-none rtl:!rounded-tr-none rtl:!rounded-br-none rtl:!rounded-tl-5 rtl:!rounded-bl-5" type="text" id="discount" placeholder="10">
                       </div>
                     </div>
@@ -1082,26 +1082,26 @@
               </div>
             </div>
             <div class="col-span-4 2lg:col-span-12">
-              <div class="border-b border-border-light pb-3">
+              <div class="dark:border-b dark:border-border-dark border-b border-border-light pb-3">
                 <h5 class="text-title font-semibold mb-3">Publish</h5>
                 <form class="flex flex-col gap-4 m-0 theme-form">
                   <div> 
                     <label for="publishStatus">Status</label>
-                    <select class="form-select block w-full px-3 text-xs font-normal text-content3 bg-white bg-clip-padding bg-no-repeat border border-border-light rounded-5 transition ease-in-out m-0 min-w-[150px] py-[9px] dark:border-border-dark" id="publishStatus" aria-label="Default select example">
+                    <select class="form-select block w-full px-3 text-xs font-normal text-content3 bg-white bg-clip-padding bg-no-repeat border border-border-light rounded-5 transition ease-in-out m-0 min-w-[150px] py-[9px] dark:border-border-dark  dark:bg-sidebar-dark2" id="publishStatus" aria-label="Default select example">
                       <option selected="">Published</option>
                       <option value="1">Draft</option>
                     </select>
                   </div>
                   <div> 
                     <label for="publishVisible">Visibility</label>
-                    <select class="form-select block w-full px-3 text-xs font-normal text-content3 bg-white bg-clip-padding bg-no-repeat border border-border-light rounded-5 transition ease-in-out m-0 min-w-[150px] py-[9px] dark:border-border-dark" id="publishVisible" aria-label="Default select example">
+                    <select class="form-select block w-full px-3 text-xs font-normal text-content3 bg-white bg-clip-padding bg-no-repeat border border-border-light rounded-5 transition ease-in-out m-0 min-w-[150px] py-[9px] dark:border-border-dark  dark:bg-sidebar-dark2" id="publishVisible" aria-label="Default select example">
                       <option selected="">Hidden</option>
                       <option value="1">Public</option>
                     </select>
                   </div>
                   <div> 
                     <label for="category">Product Category</label>
-                    <select class="form-select block w-full px-3 text-xs font-normal text-content3 bg-white bg-clip-padding bg-no-repeat border border-border-light rounded-5 transition ease-in-out m-0 min-w-[150px] py-[9px] dark:border-border-dark" id="category" aria-label="Default select example">
+                    <select class="form-select block w-full px-3 text-xs font-normal text-content3 bg-white bg-clip-padding bg-no-repeat border border-border-light rounded-5 transition ease-in-out m-0 min-w-[150px] py-[9px] dark:border-border-dark  dark:bg-sidebar-dark2" id="category" aria-label="Default select example">
                       <option selected="">Applications</option>
                       <option value="1">Grocery</option>
                       <option value="2">Fashion</option>
@@ -1112,15 +1112,15 @@
                       <option value="7">Beauty & Personal Care</option>
                     </select>
                   </div>
-                  <div> 
+                  <div>
                     <label for="productTag">Product Tags</label>
-                    <div class="border border-border-light  rounded-5 w-full p-[11px] text-xs font-semibold text-title flex gap-2"><span class="font-semibold bg-primary flex items-center gap-2 px-2 py-1 rounded-3xl !w-fit !text-3xs !text-white !leading-none">  leather<i class="w-3 h-3 cursor-pointer stroke-white alert-del" data-feather="x"></i></span>
+                    <div class="border border-border-light dark:border-border-dark rounded-5 w-full p-[11px] text-xs font-semibold text-title flex gap-2"><span class="font-semibold bg-primary flex items-center gap-2 px-2 py-1 rounded-3xl !w-fit !text-3xs !text-white !leading-none">  leather<i class="w-3 h-3 cursor-pointer stroke-white alert-del" data-feather="x"></i></span>
                       <input class="!border-none !p-0" type="text" id="productTag" required>
                     </div>
                   </div>
                   <div> 
                     <label for="productShortDescription">Product Short Description </label>
-                    <textarea class="p-[11px] focus:!border-border-light w-full border border-border-light rounded-5 text-xs text-content" placeholder="Enter Short description for product.." row="3" id="productShortDescription"></textarea>
+                    <textarea class="dark:border-border-dark p-[11px] focus:!border-border-light w-full border border-border-light rounded-5 text-xs text-content" placeholder="Enter Short description for product.." row="3" id="productShortDescription"></textarea>
                   </div>
                 </form>
               </div>
@@ -1137,7 +1137,7 @@
                   </div>
                   <div> 
                     <label for="description">Additional </label>
-                    <textarea class="p-[11px] focus:!border-border-light w-full border border-border-light rounded-5 text-xs text-content" placeholder="Enter product description.." row="3" id="description"></textarea>
+                    <textarea class="p-[11px] focus:!border-border-light dark:border-border-dark w-full border border-border-light rounded-5 text-xs text-content" placeholder="Enter product description.." row="3" id="description"></textarea>
                   </div>
                 </form>
               </div>
@@ -1153,7 +1153,7 @@
         </div>
       </div>
       <!-- Customizer-->
-      <div class="bg-white customizer-sidebar dark:bg-sidebar-dark2">
+      <div class="bg-white customizer-sidebar dark:bg-sidebar-dark2 dark:border-border-dark">
         <div class="flex rtl:flex items-center text-title bg-primary justify-between  p-[15px] shadow-md"> <span class="text-base font-semibold text-white">Customizer</span>
           <button class="customizer-close"> <i class="w-4 h-4 stroke-white" data-feather="x"></i></button>
         </div>
@@ -1166,7 +1166,7 @@
                 </div>
                 <div class="mt-2">
                   <ul class="flex items-center gap-3 flex-wrap"> 
-                    <li class="relative">
+                    <li class="relative"> 
                       <input class="absolute invisible opacity-0 peer" checked id="light-checked" type="radio" name="mode"><i class="stroke-primary z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
                       <label class="block overflow-hidden border shadow-md mode-theme-light border-light rounded-5" for="light-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/light.png" alt="light"></label>
                     </li>
@@ -1212,7 +1212,7 @@
                 </div>
               </li>
               <li>
-                <div class="flex items-center justify-between"> <span class="text-sm font-semobold text-title">Monochrome Mode</span>
+                <div class="flex items-center justify-between"> <span class="text-sm font-semobold text-title">Monochrome Mode </span>
                   <label class="inline-flex relative items-center cursor-pointer">
                     <input class="sr-only peer monochrome toggle toggle-primary" name="monochrome" type="checkbox" id="monochrome"><span class="w-7 h-4 bg-content rounded-full peer peer-focus:outline-none peer-checked:after:translate-x-full peer-checked:after:content-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-light after:border after:rounded-full after:h-3 after:w-3 after:transition-all peer-checked:bg-primary"></span>
                   </label>
@@ -1221,8 +1221,8 @@
             </ul>
           </div>
         </div>
-        <div class="flex items-center gap-2 p-[15px] border-t border-light dark:bg-primaryLight"> 
-          <button class="btn btn-ghost flex-1 reset-customizer">Reset  </button>
+        <div class="flex items-center gap-2 p-[15px] border-t border-light dark:bg-primaryLight dark:border-t dark:border-border-dark"> 
+          <button class="btn btn-ghost flex-1 reset-customizer dark:bg-sidebar-dark">Reset  </button>
           <button class="btn btn-primary text-white flex-1">Buy Now</button>
         </div>
       </div>
