--- a/html/template/invoice-create.html
+++ b/html/template/invoice-create.html
@@ -1008,8 +1008,8 @@
                   <div class="col-span-4 lg:col-span-6 sm:col-span-12"><img class="w-20" src="../../assets/images/logo/logo-dark.png" alt="logo">
                     <div class="mt-4"> 
                       <form class="m-0 theme-form">
-                        <label for="address">Address </label>
-                        <textarea class="p-[11px] focus:!border-border-light w-full border border-border-light rounded-5 text-xs text-content" placeholder="Enter address" row="3" id="address"></textarea>
+                        <label for="address">Address  </label>
+                        <textarea class="p-[11px] focus:!border-border-light dark:border-border-dark dark:focus:!border-border-dark w-full border border-border-light rounded-5 text-xs text-content" placeholder="Enter address" row="3" id="address"></textarea>
                       </form>
                     </div>
                   </div>
@@ -1024,7 +1024,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="divider w-full bg-gray-light"></div>
+                <div class="divider w-full bg-gray-light dark:bg-sidebar-dark"></div>
                 <form class="m-0 theme-form">
                   <div class="grid grid-cols-12 gap-card-gap">
                     <div class="col-span-3 md:col-span-6 sm:col-span-12 min-w-[120px]">
@@ -1037,8 +1037,8 @@
                     </div>
                     <div class="col-span-3 md:col-span-6 sm:col-span-12 min-w-[150px]">
                       <label for="status">PAYMENT STATUS</label>
-                      <select class="form-select block w-full px-3 text-xs font-normal text-content3 bg-white bg-clip-padding bg-no-repeat border border-border-light rounded-5 transition ease-in-out m-0 min-w-[150px] py-[9px]" id="status" aria-label="Default select example">
-                        <option selected="">Paid</option>
+                      <select class="form-select block w-full px-3 text-xs font-normal text-content3 bg-white bg-clip-padding bg-no-repeat border border-border-light rounded-5 transition ease-in-out m-0 min-w-[150px] py-[9px] dark:border-border-dark dark:bg-sidebar-dark2" id="status" aria-label="Default select example">
+                        <option selected="">Paid </option>
                         <option value="1">Unpaid</option>
                         <option value="2">Refund</option>
                       </select>
@@ -1049,13 +1049,13 @@
                     </div>
                   </div>
                 </form>
-                <div class="divider w-full bg-gray-light"></div>
+                <div class="divider w-full bg-gray-light dark:bg-sidebar-dark"></div>
                 <div class="grid grid-cols-12 gap-card-gap">
                   <div class="col-span-4 lg:col-span-6 sm:col-span-12">
                     <form class="flex flex-col gap-2 m-0 theme-form">
                       <label class="!mb-1" for="address">Shipping Address</label>
                       <input type="text" id="name" placeholder="Vilma Gerhold" required>
-                      <textarea class="p-[11px] focus:!border-border-light w-full border border-border-light rounded-5 text-xs text-content" placeholder="14300 Gallant Fox Ln, Bowie, Maryland, 20715, US" row="3" id="address"></textarea>
+                      <textarea class="p-[11px] focus:!border-border-light dark:border-border-dark dark:focus:!border-border-dark w-full border border-border-light rounded-5 text-xs text-content" placeholder="14300 Gallant Fox Ln, Bowie, Maryland, 20715, US" row="3" id="address"></textarea>
                       <input type="number" id="name" placeholder="(301) 464-0110" required>
                     </form>
                   </div>
@@ -1064,23 +1064,23 @@
                     <form class="flex flex-col gap-2 m-0 theme-form">
                       <label class="!mb-1" for="address">Billing Address</label>
                       <input type="text" id="name" placeholder="Vilma Gerhold" required>
-                      <textarea class="p-[11px] focus:!border-border-light w-full border border-border-light rounded-5 text-xs text-content" placeholder="14300 Gallant Fox Ln, Bowie, Maryland, 20715, US" row="3" id="address"></textarea>
+                      <textarea class="p-[11px] focus:!border-border-light dark:border-border-dark dark:focus:!border-border-dark w-full border border-border-light rounded-5 text-xs text-content" placeholder="14300 Gallant Fox Ln, Bowie, Maryland, 20715, US" row="3" id="address"></textarea>
                       <input type="number" id="name" placeholder="(301) 464-0110" required>
                     </form>
                   </div>
                 </div>
                 <div class="flex items-center gap-2">
-                  <label class="checkbox checkbox-sm cursor-pointer"> 
+                  <label class="checkbox checkbox-sm cursor-pointer">
                     <input class="peer" type="checkbox">
                     <div class="checkbox-indicator peer-checked:!bg-primary !border-primary"> <i data-feather="check"></i></div>
                   </label>
                   <p class="text-content3">Shipping & Billing address are the same?</p>
                 </div>
-                <div class="divider w-full bg-gray-light"></div>
+                <div class="divider w-full bg-gray-light dark:bg-sidebar-dark"></div>
                 <div class="invoice-table-detail">
                   <div class="overflow-auto custom-scroll"> 
                     <table class="table equal-space">
-                      <thead> 
+                      <thead>
                         <tr> 
                           <th>Product</th>
                           <th>Product Detail</th>
@@ -1088,73 +1088,73 @@
                         </tr>
                       </thead>
                       <tbody>
-                        <tr>
-                          <td><img class="min-w-[4rem] w-16 h-14 rounded-5" src="../../assets/images/ecommerce/11.jpg" alt="11.jpg"></td>
+                        <tr> 
+                          <td> <img class="min-w-[4rem] w-16 h-14 rounded-5" src="../../assets/images/ecommerce/11.jpg" alt="11.jpg"></td>
                           <td class="min-w-[560px] 2lg:min-w-[450px]">
-                            <div>
-                              <h4 class="text-xs font-semibold text-title">Coffee Cup</h4><span class="block mt-1 font-semibold text-2xs text-content">$98 * 2</span>
+                            <div> 
+                              <h4 class="text-xs font-semibold text-title dark:text-white">Coffee Cup</h4><span class="block mt-1 font-semibold text-2xs text-content dark:text-white">$98 * 2</span>
                             </div>
                           </td>
-                          <td class="min-w-[.625rem]">$190</td>
-                        </tr>
-                        <tr>
-                          <td><img class="min-w-[4rem] w-16 h-14 rounded-5" src="../../assets/images/ecommerce/13.jpg" alt="13.jpg"></td>
-                          <td class="min-w-[560px] 2lg:min-w-[450px]">
-                            <div>
-                              <h4 class="text-xs font-semibold text-title">Facewash - For Good skincare</h4><span class="block mt-1 font-semibold text-2xs text-content">$75 * 2</span>
-                            </div>
-                          </td>
-                          <td class="min-w-[.625rem]">$150</td>
-                        </tr>
-                        <tr>
-                          <td><img class="min-w-[4rem] w-16 h-14 rounded-5" src="../../assets/images/ecommerce/14.jpg" alt="14.jpg"></td>
-                          <td class="min-w-[560px] 2lg:min-w-[450px]">
-                            <div>
-                              <h4 class="text-xs font-semibold text-title">Perfume - Great fragrance</h4><span class="block mt-1 font-semibold text-2xs text-content">$299</span>
-                            </div>
-                          </td>
-                          <td class="min-w-[.625rem]">$299</td>
-                        </tr>
-                        <tr>
-                          <td><img class="min-w-[4rem] w-16 h-14 rounded-5" src="../../assets/images/ecommerce/16.jpg" alt="16.jpg"></td>
-                          <td class="min-w-[560px] 2lg:min-w-[450px]">
-                            <div>
-                              <h4 class="text-xs font-semibold text-title">Women's Leather Bags</h4><span class="block mt-1 font-semibold text-2xs text-content">$212</span>
-                            </div>
-                          </td>
-                          <td class="min-w-[.625rem]">$212</td>
+                          <td class="min-w-[.625rem] dark:text-white">$190</td>
                         </tr>
                         <tr> 
-                          <td class="text-xs font-bold" colspan="2">Sub Total :</td>
-                          <td class="text-xs font-bold text-end">$851.00 </td>
+                          <td> <img class="min-w-[4rem] w-16 h-14 rounded-5" src="../../assets/images/ecommerce/13.jpg" alt="13.jpg"></td>
+                          <td class="min-w-[560px] 2lg:min-w-[450px]">
+                            <div> 
+                              <h4 class="text-xs font-semibold text-title dark:text-white">Facewash - For Good skincare</h4><span class="block mt-1 font-semibold text-2xs text-content dark:text-white">$75 * 2</span>
+                            </div>
+                          </td>
+                          <td class="min-w-[.625rem] dark:text-white">$150</td>
                         </tr>
                         <tr> 
-                          <td class="text-xs" colspan="2">Discount :</td>
+                          <td> <img class="min-w-[4rem] w-16 h-14 rounded-5" src="../../assets/images/ecommerce/14.jpg" alt="14.jpg"></td>
+                          <td class="min-w-[560px] 2lg:min-w-[450px]">
+                            <div> 
+                              <h4 class="text-xs font-semibold text-title dark:text-white">Perfume - Great fragrance</h4><span class="block mt-1 font-semibold text-2xs text-content dark:text-white">$299</span>
+                            </div>
+                          </td>
+                          <td class="min-w-[.625rem] dark:text-white">$299</td>
+                        </tr>
+                        <tr> 
+                          <td> <img class="min-w-[4rem] w-16 h-14 rounded-5" src="../../assets/images/ecommerce/16.jpg" alt="16.jpg"></td>
+                          <td class="min-w-[560px] 2lg:min-w-[450px]">
+                            <div> 
+                              <h4 class="text-xs font-semibold text-title dark:text-white">Women's Leather Bags</h4><span class="block mt-1 font-semibold text-2xs text-content dark:text-white">$212</span>
+                            </div>
+                          </td>
+                          <td class="min-w-[.625rem] dark:text-white">$212</td>
+                        </tr>
+                        <tr> 
+                          <td class="text-xs dark:text-white font-bold" colspan="2">Sub Total :</td>
+                          <td class="text-xs dark:text-white font-bold text-end">$851.00 </td>
+                        </tr>
+                        <tr> 
+                          <td class="text-xs dark:text-white" colspan="2">Discount : </td>
                           <td class="text-xs text-content3 text-end">-$50.00</td>
                         </tr>
                         <tr> 
-                          <td class="text-xs" colspan="2">Shipping Charge :</td>
+                          <td class="text-xs dark:text-white" colspan="2">Shipping Charge :</td>
                           <td class="text-xs text-content3 text-end">-$25.99  </td>
                         </tr>
                         <tr> 
-                          <td class="text-xs" colspan="2">Tax :</td>
+                          <td class="text-xs dark:text-white" colspan="2">Tax :</td>
                           <td class="text-xs text-content3 text-end">-$12.59  </td>
                         </tr>
                         <tr> 
-                          <td class="text-xs font-bold" colspan="2">Total (USD) :</td>
-                          <td class="text-xs font-bold text-end">$787.6 </td>
+                          <td class="text-xs dark:text-white font-bold" colspan="2">Total (USD) :</td>
+                          <td class="text-xs dark:text-white font-bold text-end">$787.6 </td>
                         </tr>
                       </tbody>
                     </table>
                   </div>
                 </div>
-                <div class="divider w-full bg-gray-light"></div>
+                <div class="divider w-full bg-gray-light dark:bg-sidebar-dark"></div>
                 <div class="w-[245px] max-w-[300px]">
                   <form class="flex flex-col gap-2 m-0 theme-form">
                     <label class="!mb-0" for="address">Payment Detail</label>
-                    <select class="form-select block w-full px-3 text-xs font-normal text-content3 bg-white bg-clip-padding bg-no-repeat border border-border-light rounded-5 transition ease-in-out m-0 min-w-[150px] py-[9px]" id="paymentMethod" aria-label="Default select example">
-                      <option selected="">Payment Method</option>
-                      <option value="1">Mastercard</option>
+                    <select class="form-select block w-full px-3 text-xs font-normal text-content3 bg-white bg-clip-padding bg-no-repeat border border-border-light rounded-5 transition ease-in-out m-0 min-w-[150px] py-[9px] dark:bg-sidebar-dark2 dark:border-border-dark" id="paymentMethod" aria-label="Default select example">
+                      <option selected="">Payment Method </option>
+                      <option value="1">Mastercard </option>
                       <option value="2">Credit Card</option>
                       <option value="3">PayPal</option>
                       <option value="4">Visa</option>
@@ -1164,15 +1164,15 @@
                     <input type="number" id="name" placeholder="$787.6">
                   </form>
                 </div>
-                <div class="divider w-full bg-gray-light"></div>
+                <div class="divider w-full bg-gray-light dark:bg-sidebar-dark"></div>
                 <form class="flex flex-col gap-2 m-0 theme-form">
                   <label for="notes">Notes</label>
                   <p class="font-medium text-content3 !text-left rtl:!text-right">All accounts must be settled within seven days of receiving an invoice. to be paid by check, credit card, or online direct deposit. If the account is not paid within seven days, the agreed-upon quoted fee indicated above will be charged to the credits details provided as confirmation of the task completed.</p>
                 </form>
-                <div class="divider w-full bg-gray-light"></div>
+                <div class="divider w-full bg-gray-light dark:bg-sidebar-dark"></div>
                 <div class="flex items-center gap-2 justify-end"><a class="btn btn-success py-1 text-white text-xs flex gap-2 items-center" href="javascript:window.print()">
                      Save</a><a class="btn btn-secondary py-1 text-white text-xs flex gap-2 items-center" href="../../assets/chat-doc/invoice.pdf" Download>
-                     Cancel   </a></div>
+                     Cancel</a></div>
               </div>
             </div>
           </div>
@@ -1186,7 +1186,7 @@
         </div>
       </div>
       <!-- Customizer-->
-      <div class="bg-white customizer-sidebar dark:bg-sidebar-dark2">
+      <div class="bg-white customizer-sidebar dark:bg-sidebar-dark2 dark:border-border-dark">
         <div class="flex rtl:flex items-center text-title bg-primary justify-between  p-[15px] shadow-md"> <span class="text-base font-semibold text-white">Customizer</span>
           <button class="customizer-close"> <i class="w-4 h-4 stroke-white" data-feather="x"></i></button>
         </div>
@@ -1199,7 +1199,7 @@
                 </div>
                 <div class="mt-2">
                   <ul class="flex items-center gap-3 flex-wrap"> 
-                    <li class="relative">
+                    <li class="relative"> 
                       <input class="absolute invisible opacity-0 peer" checked id="light-checked" type="radio" name="mode"><i class="stroke-primary z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
                       <label class="block overflow-hidden border shadow-md mode-theme-light border-light rounded-5" for="light-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/light.png" alt="light"></label>
                     </li>
@@ -1245,7 +1245,7 @@
                 </div>
               </li>
               <li>
-                <div class="flex items-center justify-between"> <span class="text-sm font-semobold text-title">Monochrome Mode</span>
+                <div class="flex items-center justify-between"> <span class="text-sm font-semobold text-title">Monochrome Mode </span>
                   <label class="inline-flex relative items-center cursor-pointer">
                     <input class="sr-only peer monochrome toggle toggle-primary" name="monochrome" type="checkbox" id="monochrome"><span class="w-7 h-4 bg-content rounded-full peer peer-focus:outline-none peer-checked:after:translate-x-full peer-checked:after:content-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-light after:border after:rounded-full after:h-3 after:w-3 after:transition-all peer-checked:bg-primary"></span>
                   </label>
@@ -1254,8 +1254,8 @@
             </ul>
           </div>
         </div>
-        <div class="flex items-center gap-2 p-[15px] border-t border-light dark:bg-primaryLight"> 
-          <button class="btn btn-ghost flex-1 reset-customizer">Reset  </button>
+        <div class="flex items-center gap-2 p-[15px] border-t border-light dark:bg-primaryLight dark:border-t dark:border-border-dark"> 
+          <button class="btn btn-ghost flex-1 reset-customizer dark:bg-sidebar-dark">Reset  </button>
           <button class="btn btn-primary text-white flex-1">Buy Now</button>
         </div>
       </div>
