--- a/html/template/product.html
+++ b/html/template/product.html
@@ -1044,16 +1044,16 @@
                 <h4 class="my-2 font-semibold text-title lg:text-lg">$500 
                   <del class="text-danger">$350 </del>
                 </h4>
-                <div class="divider w-full my-4 before:!bg-border-light after:!bg-border-light 2lg:my-3"></div>
-                <div class="grid grid-cols-12 gap-card-gap items-center"> 
+                <div class="divider my-4 w-full bg-gray-light dark:bg-sidebar-dark 2lg:my-3"></div>
+                <div class="grid grid-cols-12 gap-card-gap items-center">
                   <div class="col-span-6 lg:col-span-12 md:col-span-6 sm:col-span-12">
                     <div class="flex items-center gap-3">
                       <label class="text-title text-sm font-medium" for="size">Sizes   </label>
-                      <ul class="flex items-center gap-2">
-                        <li class="border border-border-light rounded-full text-title leading-none w-8 h-8 flex items-center justify-center hover:bg-gray-extralight">S </li>
-                        <li class="btn-active text-title leading-none w-8 h-8 flex items-center justify-center border border-border-light bg-gray-extralight rounded-full hover:bg-gray-extralight">M</li>
-                        <li class="border border-border-light rounded-full text-title leading-none w-8 h-8 flex items-center justify-center hover:bg-gray-extralight">L</li>
-                        <li class="border border-border-light rounded-full text-title leading-none w-8 h-8 flex items-center justify-center hover:bg-gray-extralight">XL</li>
+                      <ul class="flex items-center gap-2"> 
+                        <li class="border border-border-light rounded-full text-title leading-none w-8 h-8 flex items-center justify-center hover:bg-gray-extralight dark:border-border-dark dark:hover:bg-sidebar-dark2">S </li>
+                        <li class="btn-active text-title leading-none w-8 h-8 flex items-center justify-center border border-border-light bg-gray-extralight rounded-full hover:bg-gray-extralight dark:border-border-dark dark:hover:bg-sidebar-dark2 dark:bg-sidebar-dark2">M</li>
+                        <li class="border border-border-light rounded-full text-title leading-none w-8 h-8 flex items-center justify-center hover:bg-gray-extralight dark:border-border-dark dark:hover:bg-sidebar-dark2">L</li>
+                        <li class="border border-border-light rounded-full text-title leading-none w-8 h-8 flex items-center justify-center hover:bg-gray-extralight dark:border-border-dark dark:hover:bg-sidebar-dark2">XL</li>
                       </ul>
                     </div>
                   </div>
@@ -1070,12 +1070,12 @@
                     </div>
                   </div>
                 </div>
-                <div class="divider w-full my-4 before:!bg-border-light after:!bg-border-light 2lg:my-3">     </div>
+                <div class="divider my-4 w-full bg-gray-light dark:bg-sidebar-dark 2lg:my-3">     </div>
                 <div>
                   <h6 class="text-title font-medium">Description: </h6>
                   <p class="text-content3 text-sm mt-2 line-clamp-2">A bag that holds your entire universe! A tote bag is a shoulder bag with parallel handles that might have side panels or not. The exterior is beige and has one main compartment, three total pockets, and a zippered clasp. I use excellent, cruelty-free materials.</p>
                 </div>
-                <div class="divider w-full my-4 before:!bg-border-light after:!bg-border-light 2lg:my-3"></div>
+                <div class="divider my-4 w-full bg-gray-light dark:bg-sidebar-dark 2lg:my-3"></div>
                 <div> 
                   <h6 class="text-title font-medium">Product Description:</h6>
                   <div class="w-full tabs flex-col mt-2">
@@ -1167,7 +1167,7 @@
         </div>
       </div>
       <!-- Customizer-->
-      <div class="bg-white customizer-sidebar dark:bg-sidebar-dark2">
+      <div class="bg-white customizer-sidebar dark:bg-sidebar-dark2 dark:border-border-dark">
         <div class="flex rtl:flex items-center text-title bg-primary justify-between  p-[15px] shadow-md"> <span class="text-base font-semibold text-white">Customizer</span>
           <button class="customizer-close"> <i class="w-4 h-4 stroke-white" data-feather="x"></i></button>
         </div>
@@ -1180,7 +1180,7 @@
                 </div>
                 <div class="mt-2">
                   <ul class="flex items-center gap-3 flex-wrap"> 
-                    <li class="relative">
+                    <li class="relative"> 
                       <input class="absolute invisible opacity-0 peer" checked id="light-checked" type="radio" name="mode"><i class="stroke-primary z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
                       <label class="block overflow-hidden border shadow-md mode-theme-light border-light rounded-5" for="light-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/light.png" alt="light"></label>
                     </li>
@@ -1226,7 +1226,7 @@
                 </div>
               </li>
               <li>
-                <div class="flex items-center justify-between"> <span class="text-sm font-semobold text-title">Monochrome Mode</span>
+                <div class="flex items-center justify-between"> <span class="text-sm font-semobold text-title">Monochrome Mode </span>
                   <label class="inline-flex relative items-center cursor-pointer">
                     <input class="sr-only peer monochrome toggle toggle-primary" name="monochrome" type="checkbox" id="monochrome"><span class="w-7 h-4 bg-content rounded-full peer peer-focus:outline-none peer-checked:after:translate-x-full peer-checked:after:content-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-light after:border after:rounded-full after:h-3 after:w-3 after:transition-all peer-checked:bg-primary"></span>
                   </label>
@@ -1235,8 +1235,8 @@
             </ul>
           </div>
         </div>
-        <div class="flex items-center gap-2 p-[15px] border-t border-light dark:bg-primaryLight"> 
-          <button class="btn btn-ghost flex-1 reset-customizer">Reset  </button>
+        <div class="flex items-center gap-2 p-[15px] border-t border-light dark:bg-primaryLight dark:border-t dark:border-border-dark"> 
+          <button class="btn btn-ghost flex-1 reset-customizer dark:bg-sidebar-dark">Reset  </button>
           <button class="btn btn-primary text-white flex-1">Buy Now</button>
         </div>
       </div>
